test/fail/macro-redeclare.rnp
let a = 1;
macro a() {}
---
SyntaxError: Cannot shadow or redeclare a
 --> fail/macro-redeclare.rnp:2:7
  |
2 | macro a() {}
  |       ^ Cannot shadow or redeclare a
  |
